changes made in nested loop

--- a/Archive/classes/Submit.cls
+++ b/Archive/classes/Submit.cls
@@ -1,47 +1,68 @@
 public class Submit{
-public string CaseID{get;set;} // Case ID  to be processed
-List<EmailMessage> lemail = new List<EmailMessage>(); // list of emails to be archived
-List<Attachment> lattach = new List<Attachment>();
-List<Attachment> lemailpdf = new List<Attachment>(); // list to contain PDF for archived emails
-List<Attachment> lparser = new List<attachment>();  //list to contain parser
-public String aid='';//string to store attachment id for every email
-public List<Integer> lint=new LISt<Integer>();
-public List<EmailMessage> emailRestore=new List<EmailMEssage>();//email list to restore
-public Submit( ApexPages.StandardController controller){
-CaseID=apexpages.currentpage().getparameters().get('id');
-}
-//public Submit(ApexPages.StandardController controller){}
-public PageReference Submit1()
-{
-CaseID=apexpages.currentpage().getparameters().get('id');
+    public string CASEID{get; set;}
+    public string pdf;
+    public List<Attachment> lemailspdf=new List<Attachment>();
+    map<id, EmailMessage> Emm;         
+    map<id, attachment> emattm;
+     public  List<attachment> att_insert = new list<attachment>();
+ public List<Attachment> lparser=new List<Attachment>();  
+    public List<Emailmessage> lemail=new List<emailmessage>();
+    public List<EmailMessage> emailrestore=new  List<EmailMessage>();
+    public String aid='';
 
-for( EmailMessage em :[select ActivityId,BccAddress,CcAddress,CreatedById,CreatedDate,FromAddress,FromName,HasAttachment,Headers,HtmlBody,Id,Incoming,IsClientManaged,IsDeleted,IsExternallyVisible,LastModifiedById,LastModifiedDate,MessageDate,MessageIdentifier,ParentId,RelatedToId,ReplyToEmailMessageId,Status,Subject,TextBody,ToAddress,ValidatedFromAddress,Counter__c FROM EmailMessage where ParentId=:CaseID])
-{
-lemail.add(em); //list of emails to be deleted
-// Converting every email into a new attachment of type pdf
-String pdfContent = 'Name:'+ em.FromAddress + '<br>'+'Subject:'+em.subject + '<br>' + 'Body:'+em.textBody;
-Attachment attachmentPDF = new Attachment();
+
+    public submit(Apexpages.StandardController controller){
+        
+        CaseID=apexpages.currentpage().getparameters().get('id');
+
+        
+    }
+    public void submit1(){
+        CaseID=apexpages.currentpage().getparameters().get('id');
+
+  
+        emm = new map<id, EmailMessage>([SELECT ActivityId,BccAddress,CcAddress,CreatedById,CreatedDate,Counter__c,FromAddress,FromName,
+                                              HasAttachment,Headers,HtmlBody,Id,Incoming,IsClientManaged,IsDeleted,IsExternallyVisible,
+                                              LastModifiedById,LastModifiedDate,MessageDate,MessageIdentifier,ParentId,RelatedToId,
+                                              ReplyToEmailMessageId,Status,Subject,SystemModstamp,TextBody,ThreadIdentifier,ToAddress,
+                                              ValidatedFromAddress FROM EmailMessage where ParentId =:caseid ]) ;
+        
+        emattm = new  map<id, attachment>([SELECT Body,BodyLength,ContentType,CreatedById,CreatedDate,Description,Id,
+                                             IsDeleted,IsPrivate,LastModifiedById,LastModifiedDate,Name,OwnerId,ParentId,
+                                             SystemModstamp FROM Attachment where ParentId in : emm.keySet()]);
+ 
+        for(attachment att : emattm.values()){
+                    
+                      attachment atch = new attachment();
+                    
+                    EmailMessage ec =  emm.get(att.ParentId);
+                    
+                    atch.Body = att.Body;
+                    atch.ContentType = att.ContentType;
+                    atch.Description = att.Description;
+                    atch.IsPrivate =  att.IsPrivate;
+                    atch.Name  =  ec.Counter__c+'_'+ec.Subject+'__Attachment_'+ att.Name;
+                    atch.OwnerId = att.OwnerId;
+                    atch.ParentId = ec.ParentId ;
+                    att_insert.add(atch);
+      
+                  }
+
+        ////////// email message
+        for(emailmessage em:[select ActivityId,BccAddress,CcAddress,CreatedById,CreatedDate,FromAddress,FromName,HasAttachment,Headers,HtmlBody,Id,Incoming,IsClientManaged,IsDeleted,IsExternallyVisible,LastModifiedById,LastModifiedDate,MessageDate,MessageIdentifier,ParentId,RelatedToId,ReplyToEmailMessageId,Status,Subject,TextBody,ToAddress,ValidatedFromAddress,Counter__c FROM EmailMessage where ParentId=:CaseID])
+        
+        {
+            lemail.add(em);
+String pdf = 'Name:'+ em.FromAddress + '<br>'+'Subject:'+em.subject + '<br>' + 'Body:'+em.textBody;
+          Attachment attachmentPDF = new Attachment();
 attachmentPdf.parentId = CaseID;
 attachmentPdf.name = 'EM'+em.Counter__c+'.pdf';
-attachmentPdf.body = blob.toPDF(pdfContent);
-lemailpdf.add(attachmentPdf);//adding every pdf_Attachment to a list for insertion later on
+attachmentPdf.body = blob.toPDF(pdf);
+lemailspdf.add(attachmentPdf);//adding every pdf_Attachment to a list for insertion later on
 
-
-//converting  attachments of every email to case attachments by chnging their parent id
-
-    for(attachment a:[select id,name,parentID,body from attachment where parentid=:em.id])
-    {     
-    Attachment att=new Attachment();
-    att.body=a.body;
-    att.parentId=CaseID;
-    att.name=em.Counter__c + '_' + a.name ;
-    lattach.add(att);
     }
-   }
-insert lattach;
-    
-    //creating a email info parser file for retreiving email back
-    for(EmailMessage em:lemail)
+           ////// parcer
+       for(EmailMessage em:lemail)
     {
         for( Attachment a:[select id,name,parentID,body from attachment where parentid=:CaseID and name like :(em.Counter__c+'%')])
         {
@@ -63,31 +84,20 @@ insert lattach;
                             '#%#'+em.Subject+
                             '#%#'+aid); // it stores old attachment id we need new ids
     lparser.add(at);
-    System.debug('############'+aid);
     aid='';
 }
 
-insert lemailpdf;
+insert lemailspdf;
 delete lemail;
 insert lparser;
+        insert lemailspdf;
+delete lemailspdf;
+            
+    
 
-PageReference pg=new PageReference('/'+ CaseID);
-return pg;
-}
-
-public PageReference DontRestore()
-{
-CaseID=apexpages.currentpage().getparameters().get('id');
-PageReference pg=new PageReference('/'+CaseID);
-return pg;
-}
-
-
-
-
-
-/////////////////////////////////////RESTORE
-public PageReference Submit2(){
+    }
+/////////////////////////////////////RESTORE////
+public Pagereference Submit2(){
 List<String> atids = new List<String>();
 Map<integer,List<id>> EmailAttachementMap=new Map<integer,List<id>>();
 integer i=0;
@@ -98,7 +108,6 @@ for(Attachment at:[Select Id,ParentId,Name,body From Attachment where name like 
     //Reading PArser File and creating a email corresponding to every parser and fetching attachment ids in parser
     String bodyContent = at.body.toString(); //bodyContent is body of parser file
     String[] lstring = bodycontent.split('#%#');
-    //system.debug('############################'+ lstring);
 
     EmailMessage em=new EmailMessage();
     em.BccAddress=lstring[1];
@@ -113,23 +122,19 @@ for(Attachment at:[Select Id,ParentId,Name,body From Attachment where name like 
     
     if(lstring.size()==13)
     {
-    system.debug('###########IFLOOOPTESTED&&&&&&&&&&&');
     atids = lstring[12].split(';'); //atids contains  attachment ids stored in parser file
     }
     // Storing list of ids
     if(atids.size()>0)
     {
-    system.debug('##########ATTACHMENTIDS##########'+atids);
     List<id> AttachmentsID=new List<id>(); // this will contain attachment ids to be inserted       
         For(integer j=0;j<atids.size();j++)
         {    Attachment b=new Attachment();
              b = [SELECT Body,BodyLength,ContentType,CreatedById,CreatedDate,Description,Id,
                IsDeleted,IsPrivate,LastModifiedById,LastModifiedDate,Name,OwnerId,ParentId,SystemModstamp FROM Attachment WHERE id=:atids[j]];
             AttachmentsID.add(b.id);
-            System.debug('######################### '+ b);
         } 
                EmailAttachementMap.put(i++,AttachmentsID);
-               SYstem.debug('#############'+ AttachmentsID +'   '+ i);
 
     }
 }
@@ -147,8 +152,7 @@ insert emailrestore;
         }
         //for loop close
         
-        System.debug('++++++++++++++++++++++++'+EmailAttachementMap1);
-        List<Attachment> atmList=new List<Attachment>();
+       List<Attachment> atmList=new List<Attachment>();
         List<Attachment> atmLis=new List<Attachment>();
          for(id p_id : EmailAttachementMap1.keySet() )   // traversing list of inserted email ids in map
          {     
@@ -171,10 +175,10 @@ insert emailrestore;
                     atmLis.add(attm);                    
                }
              }  
-        }//For loop close
+        }
        
-       insert atmList; //inser
-       //delete atmLis;
+       insert atmList; 
+       
        del();
 
     PageReference pg=new PageReference('/'+CaseID);
@@ -186,8 +190,6 @@ void del()
         List<Attachment> EmailfilesDelete=new List<Attachment>();
          ParserfilesDelete=[Select Id,ParentId,Name,body,ContentType From Attachment where name like 'Parser%.txt' and ParentId=:CaseID];
          EmailfilesDelete=[Select Id,ParentId,Name,body,ContentType From Attachment where name like 'EM%.pdf' and ParentId=:CaseID];
-        //Delete ParserfilesDelete;
-        //Delete EmailfilesDelete;
+       
     }
-
 }
